Fix menu pinning on FireFox
Refs #167

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -8,10 +8,8 @@
 }
 
 #header-content, #content {
-  min-width: 600px;
-  max-width: 1320px;
-  margin: 0 auto;
-  padding-top: 10px;
+  padding: 10px;
+  padding-left: 20px;
 }
 
 #logo-and-slogan, #header-search-box {
